--- a/Views/Parts.Blogs.BlogPost.List.liquid
+++ b/Views/Parts.Blogs.BlogPost.List.liquid
@@ -1,5 +1,3 @@
-﻿<div class="row">
-    <div class="col-md-6 col-md-push-3">
-        {{ Model.ContentItems | Display }}
-    </div>
+﻿<div class="col-md-6 col-md-push-3">
+    {{ Model.ContentItems | Display }}
 </div>
