--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -153,3 +153,7 @@ Author: Eon
 --------------------------------------*/
 @import "../NotDeployed/SimpleTemplate/sass/coming-soon";
 @import "../NotDeployed/SimpleTemplate/sass/coming-soon2";
+
+
+/*--------Custom styling-------*/
+@import "custom-style";
