--- a/Styles/custom-style.scss
+++ b/Styles/custom-style.scss
@@ -1,3 +1,10 @@
-﻿.entry-content {
+﻿/* Set the font-size for the blog posts. */
+.entry-content {
     font-size: 1.1em;
+}
+
+/* Display the search results using flex.  */
+.search-results {
+    display: flex;
+    justify-content: space-between;
 }
