--- a/Views/Content-BlogPost.Detail.liquid
+++ b/Views/Content-BlogPost.Detail.liquid
@@ -4,7 +4,7 @@
         <article class="entry">
             <div class="entry-media">
                 <figure>
-                    <img src="{{ Model.ContentItem.BlogPost.Fields[0].FirstMediaUrl }}" />
+                    <img src="{{ Model.ContentItem.BlogPost.Cover.FirstMediaUrl }}" />
                 </figure>
             </div>
             <h2 class="entry-title">{{ Model.ContentItem.TitlePart.Title }}</h2>
@@ -13,11 +13,7 @@
                     <i class="fa fa-calendar"></i>
                     {{ Model.ContentItem.CommonPart.PublishedUtc }}
                 </span>
-                <a href="{{ Model.ContentItem.AutoroutePart.DisplayAlias }}">
-                    <i class="fa fa-comments"></i>
-                    {{ Model.ContentItem.CommentsPart.CommentsCount }} komment
-                </a>
-                <a href="{{ Model.ContentItem.AutoroutePart.DisplayAlias }}">
+                <span>
                     <i class="fa fa-user"></i>
                     {{ Model.ContentItem.CommonPart.Owner.UserName }}
                 </a>
