--- a/Views/Content-BlogPost.Summary.liquid
+++ b/Views/Content-BlogPost.Summary.liquid
@@ -2,17 +2,13 @@
     <div class="entry-media">
         <figure>
             <a href="{{ Model.ContentItem.AutoroutePart.DisplayAlias }}">
-                <img src="{{ Model.ContentItem.BlogPost.Cover.FirstMediaUrl }}"/>
+                <img class="img-responsive" src="{{ Model.ContentItem.BlogPost.Cover.FirstMediaUrl }}"/>
             </a>
         </figure>
         <div class="entry-meta">
-            <span>
+            <a href="{{ Model.ContentItem.AutoroutePart.DisplayAlias }}">
                 <i class="fa fa-calendar"></i>
                 {{ Model.ContentItem.CommonPart.PublishedUtc }}
-            </span>
-            <a href="{{ Model.ContentItem.AutoroutePart.DisplayAlias }}">
-                <i class="fa fa-comments"></i>
-                {{ Model.ContentItem.CommentsPart.CommentsCount }} komment
             </a>
             <a href="{{ Model.ContentItem.AutoroutePart.DisplayAlias }}">
                 <i class="fa fa-user"></i>
