--- a/Styles/style.css
+++ b/Styles/style.css
@@ -7871,7 +7871,8 @@ label.error {
 .entry-content {
   font-size: 1.1em; }
 
-/* Display the search results using flex  */
-.search-results {
-  display: flex;
-  justify-content: space-between; }
+/* Display the search results and the tagged posts using flex  */
+.search-results, .tagged-posts {
+  display: flex; }
+  .search-results li, .tagged-posts li {
+    padding: 10px; }
